--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <title>Hotel Booking</title>
+    <title>Happy Stay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
